frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-kube
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-slim-app
  template:
    metadata:
      labels:
        app: react-slim-app
    spec:
      containers:
      - name: react-app-kube
        image: ikegabriel/react-slim:main
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
