frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-slim-service
spec:
  selector:
    app: react-slim-app
  ports:
  - port: 5000
    targetPort: 80
    protocol: "TCP"
  
  type: LoadBalancer
