frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-slim-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "react.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-slim-service
            port:
              number: 5000
